Updated NetisHR v2 screens

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -237,6 +237,14 @@
                     <li>
                         <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
+                    <!-- This menu below is to be accessed only by site manager -->
+                    <li>
+                        <a href="site_management.html"><i class="fa fa-diamond"></i><span class="nav-label">Site Management</span></a>
+                    </li>
+                    <!-- This menu below is to be accessed only by system manager -->
+                    <li>
+                        <a href="system_management.html"><i class="fa fa-diamond"></i><span class="nav-label">System Management</span></a>
+                    </li>
 
 
                 </ul>
