Updated NetisHR v2 screens

--- a/netishr/icons.html
+++ b/netishr/icons.html
@@ -22,11 +22,7 @@
 
     <nav class="navbar-default navbar-static-side" role="navigation">
 			<div w3-include-html="navigation.html"></div>
-			<script src="js/w3data.js"></script>
-			<script>
-				w3IncludeHTML();
-			</script>
-        </nav>    </nav>
+        </nav>
 
         <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
@@ -879,7 +875,10 @@
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-
+	<script src="js/w3data.js"></script>
+	<script>
+		w3IncludeHTML();
+	</script>
 
 </body>
 
