--- a/netishr/persons_profile.html
+++ b/netishr/persons_profile.html
@@ -21,10 +21,6 @@
 
         <nav class="navbar-default navbar-static-side" role="navigation">
 			<div w3-include-html="navigation.html"></div>
-			<script src="js/w3data.js"></script>
-			<script>
-				w3IncludeHTML();
-			</script>
         </nav>
         <div id="page-wrapper" class="gray-bg">
             <div class="row border-bottom">
@@ -166,14 +162,14 @@
 
                 </div>
             </div>
-            <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="wrapper wrapper-content animated fadeIn">
 
 
                 <div class="row m-b-lg m-t-lg">
                     <div class="col-md-6">
 
                         <div class="profile-image">
-                            <img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
+                            <img src="img/a2.jpg" class="img-circle circle-border m-b-md" alt="profile">
                         </div>
                         <div class="profile-info">
                             <div class="">
@@ -181,203 +177,106 @@
                                     <h2 class="no-margins">
                                     Tono Kartono
                                 </h2>
-                                    <h4>Department Head</h4>
-                                    <h4>IT Consulting Department</h4>
-                                    <small>
-                                    There are many variations of passages of Lorem Ipsum available, but the majority
-                                    have suffered alteration in some form Ipsum available.
-                                </small>
+                                    <h4>NIP : 10033</h4>
+ 									<h4>
+										Job Title : IT Developer
+									</h4>
+									<h4>
+										Job Sub Level : IT Team
+									</h4>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <table class="table small m-b-xs">
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <strong>142</strong> Projects
-                                    </td>
-                                    <td>
-                                        <strong>22</strong> Followers
-                                    </td>
-
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>61</strong> Comments
-                                    </td>
-                                    <td>
-                                        <strong>54</strong> Articles
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>154</strong> Tags
-                                    </td>
-                                    <td>
-                                        <strong>32</strong> Friends
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-md-3">
-                        <small>Sales in last 24h</small>
-                        <h2 class="no-margins">206 480</h2>
-                        <div id="sparkline1"></div>
-                    </div>
-
-
                 </div>
                 <div class="row">
-
-                    <div class="col-lg-3">
-
                         <div class="ibox float-e-margins">
                             <div class="ibox-content">
-                                <ul class="nav nav-tabs">
-                                    <span class="pull-right small text-muted">Active</span>
-                                    <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Basic Info</a></li>
-                                    <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i> Additional info</a></li>
-                                    <li><a data-toggle="tab" href="#tab-3"><i class="fa fa-briefcase"></i> Employment History info</a></li>
-                                </ul>
-                                <div class="tab-content">
-                                    <div id="tab-1" class="tab-pane active">
-
-                                        <form method="get" class="form-horizontal">
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Name</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Tono Kartono</p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Gender</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Male
-                                                        <!--
-                                            <div class="col-sm-10"><select class="form-control m-b" name="account">
-                                        <option>Male</option>
-                                        <option>Female</option>
-                                        <option>Unspecified</option>
-                                            </select>-->
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Address</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Jakarta</p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Email</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">username@domain.com</p>
-                                                </div>
-                                            </div>
-
-                                            <div class="hr-line-dashed"></div>
-
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Employee ID</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">123134123</p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Employment Status</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Employee</p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Job Title</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Employee</p>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Start Working Date</label>
-                                                <div class="col-sm-10">
-                                                    <p class="form-control-static">Employee</p>
-                                                </div>
-                                            </div>
-
-                                        </form>
-
-                                    </div>
-                                    <div id="tab-2" class="tab-pane">
-                                        (TBA)
-                                    </div>
-                                    <div id="tab-3" class="tab-pane">
-                                        (TBA)
+                                <div class="row m-t-lg">
+					                <div class="tabs-container">
+    									<div class="tabs-left">
+                                            <ul class="nav nav-tabs">
+                                                <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Main Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i> Organization and Job Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-4"><i class="fa fa-user"></i> Marital Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-5"><i class="fa fa-user"></i> Family Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-6"><i class="fa fa-user"></i> Address Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-7"><i class="fa fa-briefcase"></i> Contact Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-8"><i class="fa fa-briefcase"></i> Education Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-9"><i class="fa fa-briefcase"></i> Organization Experience</a></li>
+                                                <li><a data-toggle="tab" href="#tab-10"><i class="fa fa-briefcase"></i> Training And Certification</a></li>
+                                                <li><a data-toggle="tab" href="#tab-11"><i class="fa fa-briefcase"></i> Work Experience</a></li>
+                                                <li><a data-toggle="tab" href="#tab-12"><i class="fa fa-briefcase"></i> Achievement</a></li>
+                                                <li><a data-toggle="tab" href="#tab-13"><i class="fa fa-user"></i> Language Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-14"><i class="fa fa-user"></i> Reference Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-15"><i class="fa fa-user"></i> Disease Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-16"><i class="fa fa-user"></i> Bank Account Information</a></li>
+                                            </ul>
+										<div class="tab-content ">
+											<div id="tab-1" class="tab-pane active">
+												<fieldset class="form-horizontal">
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Name</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Tono Kartono</p>
+													</div>
+												</div>
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Title</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Mr</p>
+													</div>
+												</div>
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Photo</label>
+													<div class="col-sm-10">
+														<p class="form-control-static"><a>MyPhoto.Jpg</a></p>
+													</div>
+												</div>
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Gender</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Male</p>
+													</div>
+												</div>
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Religion</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Islam</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">Country of Birth</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Indonesia</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">City of Birth</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Medan</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">Mother Language</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Indonesia</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">Nationality</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Indonesia</p>
+													</div>
+												</div>
+												</fieldset>
+											</div>
+										</div>
+									</div>
                                     </div>
                                 </div>
-                            </div>
+							</div>
                         </div>
-                        <div class="ibox float-e-margins">
-                            <div class="ibox-title">
-                                <h5>More info (customizeable)</h5>
-                                <div class="ibox-tools">
-                                    <a class="collapse-link">
-                                        <i class="fa fa-chevron-up"></i>
-                                    </a>
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                        <i class="fa fa-wrench"></i>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-user">
-                                        <li><a href="#">Config option 1</a>
-                                        </li>
-                                        <li><a href="#">Config option 2</a>
-                                        </li>
-                                    </ul>
-                                    <!--<a class="close-link">
-                                    <i class="fa fa-times"></i>
-                                </a>-->
-                                </div>
-                            </div>
-                            <div class="ibox-content">
-                                <form method="get" class="form-horizontal">
-
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">Key</label>
-                                        <div class="col-sm-10">
-                                            <p class="form-control-static">Value</p>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">Key</label>
-                                        <div class="col-sm-10">
-                                            <p class="form-control-static">Value</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="hr-line-dashed"></div>
-
-
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">Key</label>
-                                        <div class="col-sm-10">
-                                            <p class="form-control-static">Value</p>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">Key</label>
-                                        <div class="col-sm-10">
-                                            <p class="form-control-static">Value</p>
-                                        </div>
-                                    </div>
-
-                                </form>
-                            </div>
-                        </div>
-
-
-                    </div>
-
-
                 </div>
 
             </div>
@@ -423,6 +322,11 @@
 
         });
     </script>
+		<script src="js/w3data.js"></script>
+	<script>
+		w3IncludeHTML();
+	</script>
+
 
 </body>
 
