--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -104,11 +104,8 @@
     <div id="wrapper">
 
         <nav class="navbar-default navbar-static-side" role="navigation">
-			<div w3-include-html="navigation.html"></div>
-			<script src="js/w3data.js"></script>
-			<script>
-				w3IncludeHTML();
-			</script>
+
+            <div w3-include-html="navigation.html"></div>
         </nav>
         <div id="page-wrapper" class="gray-bg">
             <div class="row border-bottom">
@@ -281,6 +278,38 @@
                                         <option value="Job Specific (Behaviour)">Job Specific (Behaviour)</option>
                                         <option value="Job Specific (Technical)">Job Specific (Technical)</option>
                                     </select>
+
+                                    <div>
+                                        Or create
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newcategory">New category</button>
+                                        <div class="modal inmodal" id="newcategory" tabindex="-1" role="dialog" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content animated bounceInRight">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                        <i class="fa fa-laptop modal-icon"></i>
+                                                        <h4 class="modal-title">New Category</h4>
+                                                        <small class="font-bold">Please enter new category.</small>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="form-group">
+                                                            <label class="col-sm-2 control-label">Name: </label>
+                                                            <div class="col-sm-10">
+                                                                <input type="text" class="form-control">
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
                                 </div>
 
                                 <label class="font-noraml">Code</label>
@@ -438,7 +467,7 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
+                                                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New indicator</button>
                                                     <div class="modal inmodal" id="newindicator" tabindex="-1" role="dialog" aria-hidden="true">
                                                         <div class="modal-dialog">
                                                             <div class="modal-content animated bounceInRight">
@@ -741,6 +770,10 @@
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="js/w3data.js"></script>
+    <script>
+        w3IncludeHTML();
+    </script>
 
 </body>
 
