changed file name to mysettings.htmlUpdated NetisHR v2 screens

--- a/netishr/administrator_general_settings.html
+++ b/netishr/administrator_general_settings.html
@@ -506,7 +506,7 @@
         });
     </script>
 
-    <-- Editable scripts --></-->
+    <-- X-Editable scripts --></-->
     <script>
         $(function () {
 
@@ -617,6 +617,7 @@
 
         });
     </script>
+    
 	<script src="js/w3data.js"></script>
 	<script>
 		w3IncludeHTML();
