--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -376,11 +376,20 @@
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
 
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
-                                                    <div class="modal fade" id="newindicator" aria-hidden="true">
-                                                        <div class="modal-dialog">
-                                                            <div class="modal-content">
-                                                                <!--
+
+                                                </div>
+                                                <table class="table">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Order</th>
+                                                            <th>Description</th>
+                                                            <th>
+
+                                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New indicator</button>
+                                                                <div class="modal fade" id="newindicator" aria-hidden="true">
+                                                                    <div class="modal-dialog">
+                                                                        <div class="modal-content">
+                                                                            <!--
                                                                 <div class="modal-header">
                                                                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                     <i class="fa fa-laptop modal-icon"></i>
@@ -389,55 +398,52 @@
                                                                 </div>
                                                                 -->
 
-                                                                <div class="modal-body">
-                                                                    <div class="row">
-                                                                        <h3>New indicator</h3>
+                                                                            <div class="modal-body">
+                                                                                <div class="row">
+                                                                                    <h3>New indicator</h3>
 
-                                                                        <p>Please enter new indicator.</p>
+                                                                                    <p>Please enter new indicator.</p>
 
-                                                                        <form role="form">
-                                                                            <div class="form-group">
-                                                                                <label class="col-sm-2 control-label">Order: </label>
-                                                                                <div class="col-sm-10">
-                                                                                    <input type="text" class="form-control">
+                                                                                    <form role="form">
+                                                                                        <div class="form-group">
+                                                                                            <label class="col-sm-2 control-label">Order: </label>
+                                                                                            <div class="col-sm-10">
+                                                                                                <input type="text" class="form-control">
+                                                                                            </div>
+                                                                                        </div>
+                                                                                        <div class="form-group">
+                                                                                            <label class="col-sm-2 control-label">Description: </label>
+                                                                                            <div class="col-sm-10">
+                                                                                                <input type="text" class="form-control">
+                                                                                            </div>
+                                                                                        </div>
+                                                                                        <div>
+                                                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                                                        </div>
+                                                                                    </form>
+
                                                                                 </div>
                                                                             </div>
-                                                                            <div class="form-group">
-                                                                                <label class="col-sm-2 control-label">Description: </label>
-                                                                                <div class="col-sm-10">
-                                                                                    <input type="text" class="form-control">
-                                                                                </div>
-                                                                            </div>
-                                                                            <div>
-                                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                                                <button type="button" class="btn btn-primary">Save changes</button>
-                                                                            </div>
-                                                                        </form>
-
-                                                                    </div>
-                                                                </div>
 
 
-                                                                <!--
+                                                                            <!--
                                                                 <div class="modal-footer">
                                                                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
                                                                     <button type="button" class="btn btn-primary">Save changes</button>
                                                                 </div>
                                                                 -->
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
 
-
-                                                </div>
-                                                <table class="table">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Order</th>
-                                                            <th>Description</th>
+                                                            </th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
                                                     </tbody>
                                                 </table>
 
