--- a/netishr/persons_profile.html
+++ b/netishr/persons_profile.html
@@ -198,19 +198,9 @@
                                             <ul class="nav nav-tabs">
                                                 <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Main Information</a></li>
                                                 <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i> Organization and Job Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-4"><i class="fa fa-user"></i> Marital Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-5"><i class="fa fa-user"></i> Family Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-6"><i class="fa fa-user"></i> Address Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-7"><i class="fa fa-briefcase"></i> Contact Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-8"><i class="fa fa-briefcase"></i> Education Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-9"><i class="fa fa-briefcase"></i> Organization Experience</a></li>
-                                                <li><a data-toggle="tab" href="#tab-10"><i class="fa fa-briefcase"></i> Training And Certification</a></li>
-                                                <li><a data-toggle="tab" href="#tab-11"><i class="fa fa-briefcase"></i> Work Experience</a></li>
-                                                <li><a data-toggle="tab" href="#tab-12"><i class="fa fa-briefcase"></i> Achievement</a></li>
-                                                <li><a data-toggle="tab" href="#tab-13"><i class="fa fa-user"></i> Language Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-14"><i class="fa fa-user"></i> Reference Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-15"><i class="fa fa-user"></i> Disease Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-16"><i class="fa fa-user"></i> Bank Account Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-3"><i class="fa fa-user"></i> Contact Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-4"><i class="fa fa-briefcase"></i> Benefit and Deduction</a></li>
+                                                <li><a data-toggle="tab" href="#tab-5"><i class="fa fa-user"></i> Family Information(Notes: Termasuk additional Person information)</a></li>
                                             </ul>
 										<div class="tab-content ">
 											<div id="tab-1" class="tab-pane active">
@@ -225,12 +215,6 @@
 													<label class="col-sm-2 control-label">Title</label>
 													<div class="col-sm-10">
 														<p class="form-control-static">Mr</p>
-													</div>
-												</div>
-												<div class="form-group">
-													<label class="col-sm-2 control-label">Photo</label>
-													<div class="col-sm-10">
-														<p class="form-control-static"><a>MyPhoto.Jpg</a></p>
 													</div>
 												</div>
 												<div class="form-group">
@@ -258,7 +242,13 @@
 													</div>
 												</div>
                                                 <div class="form-group">
-													<label class="col-sm-2 control-label">Mother Language</label>
+													<label class="col-sm-2 control-label">Date of Birth</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">20/02/1991</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">Language</label>
 													<div class="col-sm-10">
 														<p class="form-control-static">Indonesia</p>
 													</div>
@@ -269,9 +259,185 @@
 														<p class="form-control-static">Indonesia</p>
 													</div>
 												</div>
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Photo</label>
+													<div class="col-sm-10">
+														<p class="form-control-static"><a>MyPhoto.Jpg</a></p>
+													</div>
+												</div>                                                
 												</fieldset>
 											</div>
-										</div>
+											<div id="tab-2" class="tab-pane">
+												<fieldset class="form-horizontal">
+												<div class="form-group">
+													<label class="col-sm-2 control-label">NIP</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">10033</p>
+													</div>
+												</div>                                                    
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Job Title</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">IT Developer</p>
+													</div>
+												</div>
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">Organization Unit</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">IT Team</p>
+													</div>
+												</div>                                                     
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Employment Type</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">Permanent</p>
+													</div>
+												</div>
+
+												<div class="form-group">
+													<label class="col-sm-2 control-label">Placement</label>
+													<div class="col-sm-10">
+														<p class="form-control-static">DKI Jakarta</p>
+													</div>
+												</div>
+												</fieldset>
+											</div>
+											<div id="tab-3" class="tab-pane">
+                								<button type="button" class="btn btn-primary btn-xs">New Contact Information</button>
+                                                <div class="full-height-scroll">
+                                                    <div class="table-responsive">
+                                                        <table class="table table-striped table-hover">
+                                                            <thead>
+                                                                <th>
+                                                                    Contact Type
+                                                                </th>
+                                                                <th>
+                                                                    Contact Value
+                                                                </th>                                                            
+                                                                <th>
+                                                                    Status
+                                                                </th>
+                                                                <th>
+                                                                    Action
+                                                                </th>
+                                                            </thead>													
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td> Telephone Number </td>
+                                                                    <td> 081362080xxx </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td> Mobile Phone Number  </td>
+                                                                    <td> 081362080xxx </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td> Email </td>
+                                                                    <td> Toto.Kartono@netikaindonesia.com </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td> Work Number </td>
+                                                                    <td> 081362080xxx </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+											</div>
+											<div id="tab-4" class="tab-pane">
+                								<button type="button" class="btn btn-primary btn-xs">New Benefit and Deduction</button>
+                                                <div class="full-height-scroll">
+                                                    <div class="table-responsive">
+                                                        <table class="table table-striped table-hover">
+                                                            <thead>
+                                                                <th>
+                                                                    Category
+                                                                </th>
+                                                                <th>
+                                                                    Type
+                                                                </th>                                                            
+                                                                <th>
+                                                                    Value
+                                                                </th>
+                                                                <th>
+                                                                    Status
+                                                                </th>
+                                                                <th>
+                                                                    Action
+                                                                </th>
+                                                            </thead>													
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td> Benefit </td>
+                                                                    <td> Location Allowance </td>
+                                                                    <td> 1.000.000 </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td> Benefit </td>
+                                                                    <td> Safety Allowance </td>
+                                                                    <td> 1.000.000 </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td> Deduction </td>
+                                                                    <td> BPJS Ketenagakerjaan </td>
+                                                                    <td> 1.000.000 </td>
+                                                                    <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
+                                                                    <td>
+                                                                        <div class="btn-group">
+                                                                            <a href="persons_profile.html"><button class="btn-white btn btn-xs">Detail</button></a>
+                                                                            <a><button class="btn-white btn btn-xs">Delete</button><a>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+											</div>
+											<div id="tab-5" class="tab-pane">
+											</div>
+                                        </div>
 									</div>
                                     </div>
                                 </div>
