--- a/netishr/index.html
+++ b/netishr/index.html
@@ -91,7 +91,7 @@
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="#">Competency Matrix</a>
+                                        <a href="competency_matrix.html">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
